--- a/src/main/resources/static/assets/css/attraction.css
+++ b/src/main/resources/static/assets/css/attraction.css
@@ -1,6 +1,6 @@
 * {
 	margin: 0px;
-	padding 0px;
+	padding: 0px;
 	box-sizing: border-box;
 }
 
@@ -87,26 +87,33 @@
 }
 
 #overview {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.8);
+	z-index: 2;
 }
 
 #overview-inner {
-	position: absolute;
+	position: fixed;
 	top: 50%;
 	left: 50%;
-	
 	transform: translateX(-50%) translateY(-50%);
 	
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	
+	border-radius: 5px;
+	
 	width: 400px;
-	height: 500px;
+	height: 600px;
 	background-color: rgba(255, 255, 255);
-	z-index: 1;
+	z-index: 3;
 }
 
 
